fix word wrap

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,6 +18,7 @@ body{
     font-weight:400;
     font-size:16px;
     color:#f5f5f5;
+    word-wrap: break-word;
 }
 .main-footer,
 .content-wrapper{
